quick currency dropdown alignment fix

--- a/src/components/currency-dropdown/currency-dropdown.styles.scss
+++ b/src/components/currency-dropdown/currency-dropdown.styles.scss
@@ -3,7 +3,7 @@
   position: absolute;
   width: 80px;
   text-align: center;
-  right: 125px;
+  right: 145px;
   top: 80px;
   box-shadow:rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
